added request api, wired profile creation on add user to AG or org for both secure and org profiles, added routest and swagger
