# src/api/profiles/models/snapShots.js
@@ -1,0 +1,52 @@
+import mongoose from 'mongoose';
+import { v4 as uuid } from 'uuid';
+
+mongoose.set('useCreateIndex', true);
+
+const snapShotSchema = new mongoose.Schema({
+	createdAt: {
+		type: Date,
+		default: Date.now(),
+		expires: '24h'
+	},
+	createdBy: {
+		type: String,
+		default: 'SYSTEM_ADMIN'
+	},
+	authGroup: {
+		type: String,
+		required: true
+	},
+	accountId: {
+		type: String,
+		required: true
+	},
+	snapShot: Object,
+	_id: {
+		type: String,
+		default: uuid
+	}
+},{ _id: false });
+
+snapShotSchema.pre('save', function(callback) {
+	//license check
+	callback();
+});
+
+snapShotSchema.virtual('id').get(function(){
+	return this._id.toString();
+});
+
+snapShotSchema.set('toJSON', {
+	virtuals: true
+});
+
+snapShotSchema.options.toJSON.transform = function (doc, ret, options) {
+	ret.id = ret._id;
+	delete ret._id;
+	delete ret.__v;
+	if(ret.meta && ret.meta.core) delete ret.meta.core;
+};
+
+// Export the Mongoose model
+export default mongoose.model('profile_snapshot', snapShotSchema);
